<resources>
    <string name="app_name">HW-Room</string>
    <string name="users">Users</string>
    <string name="add_user">Add user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add">Add</string>
    <string name="delete_button">Delete button</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="do_you_want_to_change_name">Do you want to change name?</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone\nnumber:</string>
    <string name="do_you_want_to_change_details">Do you want to change details?</string>
</resources>